--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="es" style="background:#0e0f1b;">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
 
 <!-- ═══════════════════════════════════════════════════════════════════════
