--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
-  /* Fondo animado OPTIMIZADO "Deep Space" */
+  /* Fondo animado OPTIMIZADO "Deep Space" - MÁS LENTO para fluidez */
   body::before { 
     content:""; 
     position:fixed; 
@@ -36,8 +36,7 @@
       radial-gradient(ellipse at 70% 80%, rgba(255,0,128,0.06), transparent 50%);
     z-index:-1; 
     pointer-events:none;
-    will-change: opacity;
-    animation: nebula-breathe 12s ease-in-out infinite;
+    animation: nebula-breathe 20s ease-in-out infinite;
   }
   
   @keyframes nebula-breathe {
@@ -174,15 +173,14 @@ function getRealisticUserCount() {
     0 20px 60px rgba(0,0,0,.5),
     0 0 0 1px rgba(255,255,255,.08),
     inset 0 1px 0 rgba(255,255,255,.12);
-  backdrop-filter: blur(20px); 
-  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(8px); 
+  -webkit-backdrop-filter: blur(8px);
   font-size:clamp(1.1rem,3.8vw,1.9rem); 
   font-weight:700; 
   line-height:1.25;
   opacity:0; 
   transform:translate(-50%,-52%) scale(.985);
   animation:introIn .6s ease-out .15s forwards, introHide 3.2s 1.7s forwards;
-  will-change: transform, opacity;
 }
 
 .intro .t{ 
@@ -190,7 +188,7 @@ function getRealisticUserCount() {
   background-size: 200% 200%;
   -webkit-background-clip:text; 
   -webkit-text-fill-color:transparent;
-  animation: fire-move 3s ease infinite;
+  animation: fire-move 4s ease infinite;
   text-shadow: none;
 }
 
@@ -215,7 +213,7 @@ function getRealisticUserCount() {
 </style>
 
 <!-- ═══════════════════════════════════════════════════════════════════════
-     🃏 SECCIÓN 4: BLOCK CARDS - ULTRA SUPREMO
+     🃏 SECCIÓN 4: BLOCK CARDS - ULTRA FLUIDO
      Tarjetas principales del grid (las 4 cards)
      MODIFICAR: Estilos de las cards, efectos hover, transiciones
      ═══════════════════════════════════════════════════════════════════════ -->
@@ -230,10 +228,9 @@ function getRealisticUserCount() {
   font-weight:700; 
   cursor:pointer;
   background-size:320% 320%;
-  transition: transform 0.2s cubic-bezier(0.34, 1.56, 0.64, 1);
+  transition: transform 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   overflow:hidden; 
   isolation:isolate;
-  will-change: transform;
   
   /* BORDER NIVEL APPLE - Ultra definido */
   box-shadow: 
@@ -352,7 +349,6 @@ function getRealisticUserCount() {
   padding:1rem; 
   animation:pop .6s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
   max-height:90%;
-  will-change: transform, opacity;
 }
 
 @keyframes pop{ 
@@ -421,9 +417,8 @@ function getRealisticUserCount() {
   box-shadow: 
     0 0 0 1px rgba(255,255,255,.15),
     0 6px 18px rgba(0,0,0,.35);
-  backdrop-filter:blur(8px);
+  backdrop-filter:blur(6px);
   transition: transform 0.2s cubic-bezier(0.34, 1.56, 0.64, 1);
-  will-change: transform;
 }
 
 .cta button:hover {
@@ -458,8 +453,8 @@ function getRealisticUserCount() {
   align-items:center; 
   justify-content:center; 
   background: rgba(0,0,0,0.88); 
-  backdrop-filter: blur(12px); 
-  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(8px); 
+  -webkit-backdrop-filter: blur(8px);
   opacity: 0; 
   transition: opacity 0.3s ease; 
   cursor: pointer;
@@ -717,8 +712,8 @@ body.webview #tarjetaCard {
   padding: 6px 20px; 
   border-radius: 99px; 
   color: #dfe9ff;
-  backdrop-filter: blur(16px); 
-  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px);
   opacity: 0; 
   animation: badgeDrop 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
   box-shadow: 
@@ -729,7 +724,6 @@ body.webview #tarjetaCard {
   cursor: pointer; 
   user-select: none; 
   pointer-events: auto;
-  will-change: transform, opacity;
 }
 
 @keyframes badgeDrop { 
@@ -776,7 +770,7 @@ body.webview #tarjetaCard {
   background-size: 200% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: fire-move 3s ease infinite;
+  animation: fire-move 4s ease infinite;
   text-shadow: none;
 }
 
@@ -804,7 +798,7 @@ body.webview #tarjetaCard {
   border-radius: 16px; 
   font-size: 15px; 
   color: #fff;
-  backdrop-filter: blur(12px); 
+  backdrop-filter: blur(8px); 
   font-weight: 600; 
   opacity: 0; 
   pointer-events: none;
@@ -821,7 +815,7 @@ body.webview #tarjetaCard {
 </style>
 
 <!-- ═══════════════════════════════════════════════════════════════════════
-     🎭 SECCIÓN 12: MODAL SYSTEM (Modal Unificado) - ULTRA PREMIUM
+     🎭 SECCIÓN 12: MODAL SYSTEM (Modal Unificado) - ULTRA FLUIDO
      Sistema de modales para mensajes
      MODIFICAR: Estilos del sistema de modales
      ═══════════════════════════════════════════════════════════════════════ -->
@@ -834,7 +828,7 @@ body.webview #tarjetaCard {
   align-items: center; 
   justify-content: center; 
   background: rgba(0,0,0,0.88); 
-  backdrop-filter: blur(12px); 
+  backdrop-filter: blur(8px); 
   opacity: 0; 
   transition: opacity 0.3s ease; 
 }
@@ -858,8 +852,8 @@ body.webview #tarjetaCard {
     0 30px 80px rgba(0,0,0,0.8),
     0 0 0 1px rgba(255,255,255,0.08),
     inset 0 1px 0 rgba(255,255,255,0.15);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
 }
 
 #appModal.visible .modal-glass { 
@@ -870,7 +864,7 @@ body.webview #tarjetaCard {
   font-size: 52px; 
   margin-bottom: 16px; 
   display: block; 
-  animation: bounce 1.5s ease infinite;
+  animation: bounce 2s ease infinite;
   filter: drop-shadow(0 4px 12px rgba(0,0,0,0.3));
 }
 
@@ -902,7 +896,7 @@ body.webview #tarjetaCard {
   background-size: 200% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: fire-move 3s ease infinite;
+  animation: fire-move 4s ease infinite;
   font-weight: 700; 
   display: block; 
   margin-top: 8px; 
@@ -940,7 +934,7 @@ body.webview #tarjetaCard {
   box-shadow: 
     0 0 0 1px rgba(255,255,255,0.15),
     0 6px 20px rgba(255,0,128,0.4);
-  animation: fire-move 6s ease infinite;
+  animation: fire-move 8s ease infinite;
 }
 
 .btn-secondary { 
@@ -968,7 +962,6 @@ body.webview #tarjetaCard {
   font-size: 24px; 
   opacity: 0;
   animation: floatUp 1.2s ease-out forwards;
-  will-change: transform, opacity;
   filter: drop-shadow(0 2px 6px rgba(0,0,0,0.3));
 }
 
@@ -1003,7 +996,7 @@ body.webview #tarjetaCard {
   justify-content:center; 
   z-index:110; 
   flex-direction: column;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(6px);
 }
 
 .cele-msg{ 
@@ -1018,7 +1011,7 @@ body.webview #tarjetaCard {
     0 30px 80px rgba(0,0,0,0.7),
     0 0 0 1px rgba(255,255,255,0.08),
     inset 0 1px 0 rgba(255,255,255,0.15);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(12px);
   -webkit-font-smoothing: antialiased;
 }
 
@@ -1027,7 +1020,7 @@ body.webview #tarjetaCard {
   background-size: 200% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: fire-move 3s ease infinite;
+  animation: fire-move 4s ease infinite;
   font-weight:900; 
   font-size:3.2rem;
   text-shadow: none;
