--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-<title>Triggui — Abre un libro físico. Aquí y ahora.</title>
+<title>Triggui — La chispa. 30 segundos.</title>
 
 <!-- ═══════════════════════════════════════════════════════════════════════
      🎨 SECCIÓN 1: BASE STYLES (HTML & BODY)
@@ -45,8 +45,8 @@
   }
 </style>
 
-<meta property="og:title" content="Abre. Un Libro. Físico.">
-<meta property="og:description" content="Toma un libro físico que tengas cerca, ábrelo en cualquier parte, lee la primera línea que veas.">
+<meta property="og:title" content="La chispa. El impulso.">
+<meta property="og:description" content="El libro correcto. El momento exacto. 30 segundos que eliminan la fricción de empezar.">
 <meta property="og:image" content="https://triggui.com/imagotipo.png">
 <meta property="og:url" content="https://triggui.com">
 <meta property="og:type" content="website">
@@ -1060,7 +1060,7 @@ body.webview #tarjetaCard {
      ═══════════════════════════════════════════════════════════════════════ -->
 
 <div id="progressBadge">
-  <span class="line1">Tu avance acumulado</span>
+  <span class="line1">Tu chispa acumulada</span>
   <span class="line2" id="badgeContent">Cargando...</span>
 </div>
 
@@ -1160,7 +1160,7 @@ const ANG = [115,205,35,320];
 const grad = i => `linear-gradient(${ANG[i%4]}deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
 // INTRO
-const frasesIntro = ["¿Qué sientes y qué buscas ahora?", "¿Qué sientes y qué buscas ahora?", "¿Qué sientes y qué buscas ahora?"];
+const frasesIntro = ["La chispa. El impulso.", "El libro correcto. El momento exacto.", "30 segundos. Ya."];
 document.getElementById("intro").innerHTML=`<span class="t">${frasesIntro[Math.floor(Math.random()*frasesIntro.length)]}</span>`;
 
 // === TRIPLE TAP RESET ===
@@ -1195,7 +1195,7 @@ function updateBadge() {
   const librosTexto = books === 1 ? 'libro' : 'libros';
   
   document.getElementById('badgeContent').innerHTML = 
-    `🔥 ${streak} ${diasTexto} <span class="dot"></span> 📚 ${books} ${librosTexto} <span class="dot"></span> <span class="highlight-txt">💡 ${concepts} ideas absorbidas</span>`;
+    `🔥 ${streak} ${diasTexto} <span class="dot"></span> 📚 ${books} ${librosTexto} <span class="dot"></span> <span class="highlight-txt">⚡ ${concepts} impulsos activados</span>`;
 }
 
 // BUILDERS
@@ -1272,9 +1272,9 @@ function handleBookReveal() {
   if (booksCount === 2) {
     setTimeout(() => Modal.show({
       emoji: '🔥', 
-      title: 'Vas en racha', 
-      text: '¿Te gustaría recibir ideas así cada lunes por WhatsApp?<span class="m-highlight">La sincronicidad no es coincidencia</span>',
-      btnText: 'Quiero recibirlas', 
+      title: 'La chispa ya está', 
+      text: 'Elimina la fricción cada semana.<span class="m-highlight">El libro correcto. El momento exacto.</span>',
+      btnText: 'Quiero mi chispa semanal', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
       showCancel: true, 
       cancelText: 'Seguir explorando'
@@ -1282,8 +1282,8 @@ function handleBookReveal() {
   } else if (booksCount === 5) {
     setTimeout(() => Modal.show({
       emoji: '⚡', 
-      title: '5 Libros Abiertos', 
-      text: 'Activa tu crecimiento semanal.<span class="m-highlight">$149/mes · Cancela cuando quieras</span>',
+      title: 'El impulso funciona', 
+      text: 'La chispa semanal que elimina la fricción.<span class="m-highlight">$149/mes · Cancela cuando quieras</span>',
       btnText: 'Activar ahora', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
       showCancel: true
@@ -1291,8 +1291,8 @@ function handleBookReveal() {
   } else if (booksCount === 10) {
     setTimeout(() => Modal.show({
       emoji: '🧠', 
-      title: '10 Libros · 50 Ideas', 
-      text: `${userCount} personas están creciendo hoy.<span class="m-highlight">Únete al grupo de WhatsApp</span>`,
+      title: 'Empezar ya no es difícil', 
+      text: `${userCount} personas eliminaron la fricción hoy.<span class="m-highlight">Únete por WhatsApp</span>`,
       btnText: 'Suscribirme', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
       showCancel: true
@@ -1300,8 +1300,8 @@ function handleBookReveal() {
   } else if ([15, 20, 30, 50, 75, 100].includes(booksCount)) {
     setTimeout(() => Modal.show({
       emoji: '💎', 
-      title: `${booksCount} Libros Descubiertos`, 
-      text: 'Tu mente se está expandiendo.<span class="m-highlight">Asegura tu precio de lanzamiento hoy</span>',
+      title: `${booksCount} impulsos activados`, 
+      text: 'Empezar ya no se siente pesado.<span class="m-highlight">Precio de lanzamiento hoy</span>',
       btnText: 'Ver planes', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
       showCancel: true
@@ -1361,8 +1361,8 @@ function createFloatingHeart(x, y) {
 // HANDLERS
 btnOtro.onclick = () => { location.reload(); track('reload_clicked'); };
 btnLibro.onclick = async() => {
-  btnLibro.disabled=true; cele.style.display="flex"; celeMsg.innerHTML='<span class="num">...</span><br>libros abiertos juntos';
-  try{ const r=await fetch("https://triggui-api.vercel.app/api/increment"); const d=await r.json(); celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>libros abiertos juntos`; track('physical_book_opened', { total: d.total }); }catch{}
+  btnLibro.disabled=true; cele.style.display="flex"; celeMsg.innerHTML='<span class="num">...</span><br>impulsos activados juntos';
+  try{ const r=await fetch("https://triggui-api.vercel.app/api/increment"); const d=await r.json(); celeMsg.innerHTML=`⚡ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>impulsos activados juntos`; track('physical_book_opened', { total: d.total }); }catch{}
   setTimeout(()=>{ cele.style.display="none"; btnLibro.disabled=false; },2300);
 };
 
