--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es" style="background:#0e0f1b;">
+<html lang="es" style="background:#000000;">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-<title>Triggui — La chispa. 30 segundos.</title>
+<title>Triggui — Cuando el impulso llega, el libro ya te espera</title>
 
 <!-- ═══════════════════════════════════════════════════════════════════════
      🎨 SECCIÓN 1: BASE STYLES (HTML & BODY)
@@ -12,7 +12,7 @@
      ═══════════════════════════════════════════════════════════════════════ -->
 <style id="base-styles">
   html, body { 
-    background:#0e0f1b !important; 
+    background:#000000 !important; 
     color:#fff; 
     margin:0; 
     padding:0; 
@@ -26,14 +26,14 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
-  /* Fondo animado OPTIMIZADO "Deep Space" - MÁS LENTO para fluidez */
+  /* Fondo animado OPTIMIZADO "Deep Space" - Colores de triggui.com */
   body::before { 
     content:""; 
     position:fixed; 
     inset:0; 
     background:
-      radial-gradient(ellipse at 30% 20%, rgba(48,255,228,0.08), transparent 50%),
-      radial-gradient(ellipse at 70% 80%, rgba(255,0,128,0.06), transparent 50%);
+      radial-gradient(ellipse at 30% 20%, rgba(255, 0, 85, 0.18), transparent 65%),
+      radial-gradient(ellipse at 70% 80%, rgba(255, 94, 0, 0.08), transparent 65%);
     z-index:-1; 
     pointer-events:none;
     animation: nebula-breathe 20s ease-in-out infinite;
@@ -45,8 +45,8 @@
   }
 </style>
 
-<meta property="og:title" content="La chispa. El impulso.">
-<meta property="og:description" content="El libro correcto. El momento exacto. 30 segundos que eliminan la fricción de empezar.">
+<meta property="og:title" content="Cuando el impulso llega, el libro ya te espera">
+<meta property="og:description" content="No busques libros. Deja que el conocimiento te encuentre. Directo a tu WhatsApp. 30 segundos.">
 <meta property="og:image" content="https://triggui.com/imagotipo.png">
 <meta property="og:url" content="https://triggui.com">
 <meta property="og:type" content="website">
@@ -165,7 +165,7 @@ function getRealisticUserCount() {
   padding:2rem 2.4rem; 
   background:rgba(20,24,38,.92); 
   border-radius:28px;
-  border: 1px solid rgba(48,255,228,0.25);
+  border: 1px solid rgba(255, 0, 85, 0.25);
   z-index:120; 
   font-family:'Poppins',sans-serif; 
   text-align:center;
@@ -184,7 +184,7 @@ function getRealisticUserCount() {
 }
 
 .intro .t{ 
-  background:linear-gradient(120deg, #30ffe4 0%, #FF0080 50%, #FFD700 100%); 
+  background: linear-gradient(135deg, #FF0055 0%, #FF5E00 50%, #FFD700 100%);
   background-size: 200% 200%;
   -webkit-background-clip:text; 
   -webkit-text-fill-color:transparent;
@@ -729,7 +729,7 @@ body.webview #tarjetaCard {
   max-width: 90vw; 
   z-index: 150;
   background: rgba(20,24,38,0.92); 
-  border: 1px solid rgba(48,255,228,0.2);
+  border: 1px solid rgba(255, 0, 85, 0.2);
   padding: 6px 20px; 
   border-radius: 99px; 
   color: #dfe9ff;
@@ -787,7 +787,7 @@ body.webview #tarjetaCard {
 }
 
 .highlight-txt { 
-  background: linear-gradient(120deg, #30ffe4 0%, #FF0080 50%, #FFD700 100%);
+  background: linear-gradient(135deg, #FF0055 0%, #FF5E00 50%, #FFD700 100%);
   background-size: 200% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -861,7 +861,7 @@ body.webview #tarjetaCard {
 
 .modal-glass {
   background: linear-gradient(145deg, rgba(30,34,50,0.96), rgba(10,12,20,0.98));
-  border: 1px solid rgba(48,255,228,0.25);
+  border: 1px solid rgba(255, 0, 85, 0.25);
   border-radius: 28px; 
   padding: 32px; 
   width: 88%; 
@@ -913,7 +913,7 @@ body.webview #tarjetaCard {
 }
 
 .m-highlight { 
-  background: linear-gradient(120deg, #30ffe4 0%, #FF0080 50%, #FFD700 100%);
+  background: linear-gradient(135deg, #FF0055 0%, #FF5E00 50%, #FFD700 100%);
   background-size: 200% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -949,12 +949,12 @@ body.webview #tarjetaCard {
 .m-btn:active { transform: scale(0.96); }
 
 .btn-primary { 
-  background: linear-gradient(135deg, #FF0080, #FF4500, #FFD700);
+  background: linear-gradient(135deg, #FF0055, #FF5E00, #FFD700);
   background-size: 200% 200%;
   color: white; 
   box-shadow: 
     0 0 0 1px rgba(255,255,255,0.15),
-    0 6px 20px rgba(255,0,128,0.4);
+    0 6px 20px rgba(255,0,85,0.4);
   animation: fire-move 8s ease infinite;
 }
 
@@ -1025,7 +1025,7 @@ body.webview #tarjetaCard {
   font-size:2rem; 
   text-align:center; 
   background: linear-gradient(145deg, rgba(30,34,50,0.9), rgba(10,12,20,0.95));
-  border: 1px solid rgba(48,255,228,0.3);
+  border: 1px solid rgba(255, 0, 85, 0.3);
   padding:2.5rem 3.5rem; 
   border-radius:24px;
   box-shadow: 
@@ -1037,7 +1037,7 @@ body.webview #tarjetaCard {
 }
 
 .num{ 
-  background: linear-gradient(120deg, #30ffe4 0%, #FF0080 50%, #FFD700 100%);
+  background: linear-gradient(135deg, #FF0055 0%, #FF5E00 50%, #FFD700 100%);
   background-size: 200% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -1181,8 +1181,34 @@ const isURL = s => /^https?:\/\//i.test(s || "");
 const ANG = [115,205,35,320];
 const grad = i => `linear-gradient(${ANG[i%4]}deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
-// INTRO
-const frasesIntro = ["La chispa. El impulso.", "El libro correcto. El momento exacto.", "30 segundos. Ya.", "Empezar es lo más difícil.", "La fricción desaparece.", "El impulso que te activa.", "Ya entraste.", "La chispa que elimina la fricción.", "Elimina la fricción de empezar.", "El micro-hábito más fácil.", "Una idea. 30 segundos.", "Sin abrir nada más.", "El impulso. Ahora.", "La frase que te activa.", "Ya empezaste.", "Como ponerte los tenis.", "El primer paso.", "La chispa. Ya.", "Elimina la fricción.", "El libro. El momento."];
+// INTRO - NARRATIVA NIVEL DIOS (Alineada con triggui.com)
+const frasesIntro = [
+  "Cuando el impulso llega, el libro ya te espera.",
+  "No busques libros. Deja que te encuentren.",
+  "Si no puedes leerlo ahora, ahí se queda esperando.",
+  "La persistencia del impulso.",
+  "WhatsApp es la memoria de tu intención.",
+  "La chispa. El impulso.", 
+  "El libro correcto. El momento exacto.", 
+  "30 segundos. Ya.", 
+  "Empezar es lo más difícil.", 
+  "La fricción desaparece.", 
+  "El impulso que te activa.", 
+  "Ya entraste.", 
+  "La chispa que elimina la fricción.", 
+  "Elimina la fricción de empezar.", 
+  "El micro-hábito más fácil.", 
+  "Una idea. 30 segundos.", 
+  "Sin abrir nada más.", 
+  "El impulso. Ahora.", 
+  "La frase que te activa.", 
+  "Ya empezaste.", 
+  "Como ponerte los tenis.", 
+  "El primer paso.", 
+  "La chispa. Ya.", 
+  "Elimina la fricción.", 
+  "El libro. El momento."
+];
 document.getElementById("intro").innerHTML=`<span class="t">${frasesIntro[Math.floor(Math.random()*frasesIntro.length)]}</span>`;
 
 // === TRIPLE TAP RESET ===
@@ -1207,7 +1233,7 @@ function showToast(msg, duration=3000) {
   setTimeout(() => toast.classList.remove('visible'), duration);
 }
 
-// ✨ UPDATE BADGE (Conceptos)
+// ✨ UPDATE BADGE (Chispas activadas)
 function updateBadge() {
   const streak = updateStreak(); 
   const books = getLocal('books_opened', 0);
@@ -1217,7 +1243,7 @@ function updateBadge() {
   const librosTexto = books === 1 ? 'libro' : 'libros';
   
   document.getElementById('badgeContent').innerHTML = 
-    `🔥 ${streak} ${diasTexto} <span class="dot"></span> 📚 ${books} ${librosTexto} <span class="dot"></span> <span class="highlight-txt">⚡ ${concepts} impulsos activados</span>`;
+    `🔥 ${streak} ${diasTexto} <span class="dot"></span> 📚 ${books} ${librosTexto} <span class="dot"></span> <span class="highlight-txt">⚡ ${concepts} chispas activadas</span>`;
 }
 
 // BUILDERS
@@ -1281,7 +1307,7 @@ function render(){
   }
 }
 
-// LOGICA ENGAGEMENT
+// LOGICA ENGAGEMENT - NARRATIVA NIVEL DIOS
 function handleBookReveal() {
   const booksCount = incrementBooks();
   addConcepts(4); 
@@ -1294,8 +1320,8 @@ function handleBookReveal() {
   if (booksCount === 2) {
     setTimeout(() => Modal.show({
       emoji: '🔥', 
-      title: 'La chispa ya está', 
-      text: 'Elimina la fricción cada semana.<span class="m-highlight">El libro correcto. El momento exacto.</span>',
+      title: 'Cuando el impulso llega', 
+      text: 'El libro ya te espera en WhatsApp.<span class="m-highlight">Si no puedes leerlo ahora, ahí se queda esperando.</span>',
       btnText: 'Quiero mi chispa semanal', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
       showCancel: true, 
@@ -1304,8 +1330,8 @@ function handleBookReveal() {
   } else if (booksCount === 5) {
     setTimeout(() => Modal.show({
       emoji: '⚡', 
-      title: 'El impulso funciona', 
-      text: 'La chispa semanal que elimina la fricción.<span class="m-highlight">$149/mes · Cancela cuando quieras</span>',
+      title: 'La persistencia del impulso', 
+      text: 'Una idea por semana. Directo a tu WhatsApp. 30 segundos.<span class="m-highlight">$149/mes · Cancela cuando quieras</span>',
       btnText: 'Activar ahora', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
       showCancel: true
@@ -1313,8 +1339,8 @@ function handleBookReveal() {
   } else if (booksCount === 10) {
     setTimeout(() => Modal.show({
       emoji: '🧠', 
-      title: 'Empezar ya no es difícil', 
-      text: `${userCount} personas eliminaron la fricción hoy.<span class="m-highlight">Únete por WhatsApp</span>`,
+      title: 'No es falta de ganas', 
+      text: `Es fricción de empezar. ${userCount} personas lo eliminaron hoy.<span class="m-highlight">El libro te encuentra por WhatsApp</span>`,
       btnText: 'Suscribirme', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
       showCancel: true
@@ -1322,7 +1348,7 @@ function handleBookReveal() {
   } else if ([15, 20, 30, 50, 75, 100].includes(booksCount)) {
     setTimeout(() => Modal.show({
       emoji: '💎', 
-      title: `${booksCount} impulsos activados`, 
+      title: `${booksCount} chispas activadas`, 
       text: 'Empezar ya no se siente pesado.<span class="m-highlight">Precio de lanzamiento hoy</span>',
       btnText: 'Ver planes', 
       onConfirm: () => window.open('https://triggui.com/#planes', '_blank'),
@@ -1360,8 +1386,8 @@ btnLike.onclick = (e) => {
   setTimeout(() => {
     Modal.show({
       emoji: '📸', 
-      title: 'Guárdalo', 
-      text: 'Screenshot + Close Friends.<span class="m-highlight">Este mensaje llegó para ti</span>',
+      title: 'Este momento es tuyo', 
+      text: 'Guárdalo. Compártelo.<span class="m-highlight">Cuando el impulso llega, el libro ya te espera</span>',
       btnText: 'Listo', 
       onConfirm: () => {}, 
       showCancel: false
@@ -1383,8 +1409,8 @@ function createFloatingHeart(x, y) {
 // HANDLERS
 btnOtro.onclick = () => { location.reload(); track('reload_clicked'); };
 btnLibro.onclick = async() => {
-  btnLibro.disabled=true; cele.style.display="flex"; celeMsg.innerHTML='<span class="num">...</span><br>impulsos activados juntos';
-  try{ const r=await fetch("https://triggui-api.vercel.app/api/increment"); const d=await r.json(); celeMsg.innerHTML=`⚡ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>impulsos activados juntos`; track('physical_book_opened', { total: d.total }); }catch{}
+  btnLibro.disabled=true; cele.style.display="flex"; celeMsg.innerHTML='<span class="num">...</span><br>chispas activadas juntos';
+  try{ const r=await fetch("https://triggui-api.vercel.app/api/increment"); const d=await r.json(); celeMsg.innerHTML=`⚡ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>chispas activadas juntos`; track('physical_book_opened', { total: d.total }); }catch{}
   setTimeout(()=>{ cele.style.display="none"; btnLibro.disabled=false; },2300);
 };
 
